Add matrix controller code that handles web requests